assets/css/style.css
/*------------------
    GENERAL
------------------*/

html, body{
  margin:0;
  padding:0;
  font-family: 'Open Sans', sans-serif;
  font-size:14px;
}

div{
  word-wrap: break-word;
}


/*------------------
    NAVIGATION
------------------*/

#navigation{
  background: url('../images/banner.jpg');
  height:88px;
  width:100%;
}

.nav-item{
  display:inline-block;
  margin-right:10px;
}

.nav-item a{
  color:white;
  text-decoration:none;
}
.nav-item a:hover,
.nav-item a:focus{
  text-decoration:underline;
}

#nav-list{
  margin:0!important;
  padding-top:30px;
  padding-left:0!important;
  text-align:right;

}

.site-icon{
  height: 70px;
  width: 70px;
  border-radius: 70px;
  -moz-border-radius: 70px;
  -webkit-border-radius: 70px;
  background: white;
  margin-top: -79px;
  margin-left: 10%;
}

/*------------------
    CONTENT
------------------*/


.caption{
  font-size:11px;
  color:#999;
  border-top:1px solid #999;
  padding-top:5px;
}

.container{
  margin-top:30px;
  margin-left:6%;
  width:90%;
}

.content-index{
  margin-left:19.5%;
}

#disqus_thread {
  margin-top: 30px;
}

.left-column,
.right-column{
  display:inline-block;
  vertical-align:top;
  margin-top:90px;

}

.left-column{
  margin-right:7%;
  margin-left:2%;
  width:15%;
  text-align:right;
  color:#999;
}
.right-column{
  margin-left:4%;
  width:20%;
}

.main-content{
  display:inline-block;
  width:50%;
}

.main-content .title{
  text-align:center;
  margin-bottom:10px;
}

.main-content .title a{
  color:black;
}

.main-content .title a:hover{
  color:#999;
}
/*------------------
    POSTS
------------------*/

.post-info{
  height:57px;
}

.post-img{
  width:100%;
  text-align:right;
}
.post-img img{
  width:100%;
}

.published-date{
  text-align:center;
  font-size:14px;
  margin:0;
  padding:0;
}

#summary-title,
#tag-title{
  text-align:center;
}

.tag{
  display:inline-block;
  background:lightgrey;
  padding:1px 5px;
  margin:3px 5px;
}

.tag:hover,
.tag:focus{
  background:grey;
}

.tag:hover a,
.tag:focus a{
  color:white;
}

.tag a{
  text-decoration:none;
  color:black;
  font-size:11px;
}

.tag-list-title{
  margin-left:30%;
  color:#999;
  margin-bottom:10px;
}

.tag-list{
  display:inline-block;
  list-style-type:none;
  padding:0;
  margin:0;
}


/*------------------
    TOPICS
------------------*/

.topics {
    list-style-type:none;
    display:inline-block;
    width:100%;
}

.topic {
    display:inline-block;
    width:20%;
    padding:15px 10px;
    margin:5px;
    background:lightgrey;
    color:black!important;
    text-align:center;
}

.topic:hover{
    background:grey;
    color:white!important;
}
.topic-link{
    text-decoration:none;
    color:white!important;
}

.topic-title{
    font-size:2em; /*Drop to 1.5em if any longer tags are needed*/
}



@media (max-width : 900px) {

  .left-column, .right-column{
    width:100%;
    color:#999;
    margin-top:0;
    text-align:left;
  }

  .right-column{
    width:100%;
  }

  .main-content{
    display:inline-block;
    width:100%;
  }

  .post-info{
    height:90px;
  }

}

